[gd_scene load_steps=3 format=3 uid="uid://bh0axoux7sa6y"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_io2sp"]
[ext_resource type="Texture2D" uid="uid://cov5aeb1wbvhn" path="res://Sprites/Penis.png" id="2_vv3y2"]

[node name="Enemy" type="Node2D"]
position = Vector2(414.602, 130.588)
rotation = -2.00224
script = ExtResource("1_io2sp")

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("2_vv3y2")

[node name="BulletPoint" type="Marker2D" parent="."]
position = Vector2(-1, 35)

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
